fix for overlay loader covering sidebar

--- a/src/Components/Common/Loading/loader.scss
+++ b/src/Components/Common/Loading/loader.scss
@@ -1,7 +1,11 @@
 .loader {
-    height: 100vh;
-    z-index: 1000000;
-    &.active {
-        pointer-events: none;
-    }
+  height: 100vh;
+  z-index: 1000000;
+  &.active {
+    pointer-events: none;
+  }
+}
+
+.css-df17o1 {
+  z-index: 999;
 }
