--- a/src/Components/Parts/Header/Header.scss
+++ b/src/Components/Parts/Header/Header.scss
@@ -124,7 +124,7 @@ header {
   height: 100vh;
   width: 500px;
   background: #0f161d;
-  z-index: 100;
+  z-index: 998;
   padding: 20px;
   box-sizing: border-box;
   box-shadow: -10px 0px 20px rgb(0 0 0 / 50%);
@@ -158,7 +158,7 @@ header {
   height: 100vh;
   top: 0px;
   left: 0px;
-  z-index: 998;
+  z-index: 997;
 }
 
 .buttons {
